--- a/JS/Problems/problems.yaml
+++ b/JS/Problems/problems.yaml
@@ -1,3 +1,40 @@
+JS Practice Challenges:
+
+1. Create an HTML page with a button. When the button is clicked, change the text of a paragraph element.
+  // changeBtn.addEventListener("click", () => {
+    changeText.textContent = "How are you??"
+  })
+
+2. Create a page with two images and a button. When the button is clicked, swap the source attribute of the image.
+
+3. Create a form with input fields and a submit button. Use JS to validate the form and display an error msg if the input is invalid.
+
+4. Create a unordered list. Allow users to add and remove list items dynamically using buttons.
+
+5. Build a countdown timer that starts when a button is clicked & updates the display in real-time.
+
+6. Create a tabbed interface where clicking on tabs displays different content sections without the page reload.
+
+7. Display a progress bar that updates in real-time, showing the progress of the download or form submission.
+
+8. Create a search bar that live search results as users type, updating the results without requiring a full page reload.
+
+9. Build a character counter for a text area or input field, which updates    real-time as the user types and enforces a character limit. 
+
+10. Show a progress bar which shows how much page has been scrolled.
+
+
+
+
+
+
+
+
+
+
+
+
+
 Developer Problems:
 
 1. Debugging a typeError: Cannot read property 'name' of undefined
