--- a/README copy.yaml
+++ b/README copy.yaml
@@ -228,9 +228,10 @@ Shift + Alt + A :- for commenting a code or text more than one line.
     Closures:
         Closures are nothing but a function that returns another function and access the value from its outer lexical scope.
             // function abc(){
-                let a = 32;
+                let counter = 3;
                 return function(){
-                    console.log(a);
+                    counter++;
+                    console.log(counter);
                 }
             }
             let ans = abc();
@@ -440,11 +441,15 @@ console.log(Math.multiply(2));
     setInterval:
         setInterval is same as setTimeout but setTimeout functions runs only  once after the timer expires but setInterval functions runs in the interval of the timer expires.
             // let interval = setInterval(() => {
-                console.log("Hello!");
+                console.log("Hello!"); 
                }, 2000);
 
         You can stop the setInterval function with the help of clearInterval() fnc.
             // clearInterval(interval);
+
+    
+    Event Loop:
+        Event loop is nothing but an event who checks if the main stack is empty or not. Once all the main stack code runs then all the side stack code will be executed.
 
 
     fetch API:
@@ -468,7 +473,7 @@ console.log(Math.multiply(2));
 
     Promises: 
         Promises are nothing but a asynchronous function which states only 2 things. Promise will either resolve() or reject() so according to that you have to run your code.
-
+            Example 1:
             let userGender =  new Promise((resolve, reject) => {
                 fetch(`https://randomuser.me/api/`)
                 .then(raw => raw.json())
@@ -478,11 +483,30 @@ console.log(Math.multiply(2));
                     else reject();
                 })
             });
- 
+
             userGender
             .then(() => console.log("User is a female!"))
             .catch(() => console.log("User is NOT a female!"));
 
+
+            Example 2:
+            function fetchData() {
+                return new Promise((resolve, reject) => {
+                    let success = true;
+
+                    setTimeout(() => {
+                    if (success) {
+                        resolve("Data fetched successfully.")
+                    } else reject ("Error fetching data..")
+                    }, 3000);  
+                })
+            }
+
+        fetchData()
+            .then((response) => console.log(response))
+            .catch((error) => console.log(error))
+ 
+        
 
     Callback function in an async code:
         callback function is a function which you can declare it inside a async which will run after the asynchronous code execution is done.
@@ -511,10 +535,6 @@ console.log(Math.multiply(2));
             }
 
             Hello();
-
-
-    Event Loop:
-        Event loop is nothing but an event who checks if the main stack is empty or not. Once all the main stack code runs then all the side stack code will be executed.
 
 
     Generators:
