--- a/Backend/03_EJS/reademe.yaml
+++ b/Backend/03_EJS/reademe.yaml
@@ -4,7 +4,7 @@ Setting up EJS:
 
 1. install ejs: npm i ejs
 2. configure ejs in your index.js file: app.set("view engine", "ejs");
-3. make a folder named by "views" and create your routing files inside the folder but with the .ejs extension only: views/index.ejs
+3. make a folder named by "views" and create your routing files inside the folder but with the .ejs extension only: v iews/index.ejs
 4. create a route inside index.js file and while sending a response use render function: res.render();
 5. inside res.render() mentioned your file name from views folder but without the extension as by default "views" folder contains only .ejs file: res.render("index") 
 6. to get the value dynamically and display in your frontend then use <%=variable name%>
@@ -17,3 +17,17 @@ Setting up EJS:
         HTML:
         <h3>Get In Touch with <%=name%></h3>
 
+
+Static files setup:
+    Folder structure
+    -public folder
+        -images folder
+            .png files
+            .jpg files
+        -stylesheets folder
+            .css files
+        -javascripts folder
+            .js files
+
+    app.use(express.static("./public"));
+    link the files to be used inside index.js file by providing their respective path but not to use /public as it will be by default added. 
