--- a/React/04tailwind-props/package.json
+++ b/React/04tailwind-props/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks",
+  "name": "04tailwind-props",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
