--- a/React/bgchanger/package.json
+++ b/React/bgchanger/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.13",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
